Closed
Bug 1155072
Opened 10 years ago
Closed 10 years ago
Deprecate nsITelephonyListener.conferenceCallStateChanged
Categories
(Firefox OS Graveyard :: RIL, defect)
Tracking
(tracking-b2g:backlog, firefox44 fixed)
| Tracking | Status | |
|---|---|---|
| firefox44 | --- | fixed |
People
(Reporter: aknow, Assigned: bhsu)
References
Details
Attachments
(2 files, 5 obsolete files)
|
973 bytes,
patch
|
ben.tian
:
review+
|
Details | Diff | Splinter Review |
|
16.38 KB,
patch
|
bevis
:
review+
|
Details | Diff | Splinter Review |
Originally, we have to fire |callStateChanged| for every calls and then |conferenceCallStateChanged|. The purpose is:
"""
This is used to notify that every conference participant has been visited. So that TelephonyDOM could know when is the correct time to dispatch conference state change event to gaia.
"""
In bug 1155063, callStateChanged could accepts an array of call information. As long as we ensure that the information of all the conference participants is carry by one callStateChanged, we could safely remove conferenceCallStateChanged and let TelephonyDOM itself detects the conference states.
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → bhsu
| Assignee | ||
Comment 1•10 years ago
|
||
| Assignee | ||
Comment 2•10 years ago
|
||
| Assignee | ||
Comment 3•10 years ago
|
||
Attachment #8610038 -
Attachment is obsolete: true
| Assignee | ||
Updated•10 years ago
|
Attachment #8610042 -
Flags: review?(szchen)
| Reporter | ||
Comment 5•10 years ago
|
||
Comment on attachment 8610042 [details] [diff] [review]
Deprecate nsITelephonyListener::conferenceCallStateChanged
Review of attachment 8610042 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/telephony/Telephony.cpp
@@ +633,5 @@
> + break;
> + }
> + }
> + }
> + mGroup->ChangeState(conferenceCallState);
The set of valid conference call state is different from the set of call state. The value could only be CONNECTED, HELD, UNKNOWN. Let's have an assert that make sure the value we compute is valid.
::: dom/telephony/gonk/TelephonyService.js
@@ +1655,5 @@
> this._notifyAllListeners("supplementaryServiceNotification",
> [aClientId, callIndex, notification]);
> },
>
> _handleConferenceCallStateChanged: function(aState) {
Is it possible to remove everything about conferenceCallState?
I'll expect we don't need this kind of information in TelephonyService.js.
Attachment #8610042 -
Flags: review?(szchen) → review-
| Assignee | ||
Comment 6•10 years ago
|
||
Comment on attachment 8610042 [details] [diff] [review]
Deprecate nsITelephonyListener::conferenceCallStateChanged
Review of attachment 8610042 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/telephony/Telephony.cpp
@@ +633,5 @@
> + break;
> + }
> + }
> + }
> + mGroup->ChangeState(conferenceCallState);
You're absolutely right, I'll add assertions here.
::: dom/telephony/gonk/TelephonyService.js
@@ +1655,5 @@
> this._notifyAllListeners("supplementaryServiceNotification",
> [aClientId, callIndex, notification]);
> },
>
> _handleConferenceCallStateChanged: function(aState) {
Well, I think removing everything related is totally doable, since new conference states now can be computed at DOM by itself. However, there is still some control logic depending on conference state in |TelephonyService.js|, so it might take me some time to get rid all of them.
| Assignee | ||
Comment 7•10 years ago
|
||
Attachment #8610042 -
Attachment is obsolete: true
| Assignee | ||
Updated•10 years ago
|
Attachment #8672448 -
Attachment description: Part 1: Deprecate nsITelephonyListener::conferenceCallStateChanged (Telephony)) → Part 1: Deprecate nsITelephonyListener::conferenceCallStateChanged (Telephony)
| Assignee | ||
Comment 8•10 years ago
|
||
Attachment #8610039 -
Attachment is obsolete: true
| Assignee | ||
Comment 9•10 years ago
|
||
Attachment #8672448 -
Attachment is obsolete: true
| Assignee | ||
Comment 10•10 years ago
|
||
Comment on attachment 8672485 [details] [diff] [review]
Part 1: Deprecate nsITelephonyListener::conferenceCallStateChanged (Telephony)
>- this._currentConferenceState = nsITelephonyService.CALL_STATE_UNKNOWN;
Since this data is only used by hangUpConference(), I also remove this data to simplify Telephony Service.
Attachment #8672485 -
Flags: review?(btseng)
Updated•10 years ago
|
Blocks: b2g-ril-interface
Comment 11•10 years ago
|
||
Comment on attachment 8672485 [details] [diff] [review]
Part 1: Deprecate nsITelephonyListener::conferenceCallStateChanged (Telephony)
Review of attachment 8672485 [details] [diff] [review]:
-----------------------------------------------------------------
Please see my comments below and
please also remove conferenceCallStateChanged in
https://dxr.mozilla.org/mozilla-central/source/dom/telephony/test/marionette/test_TelephonyUtils.js#48
https://dxr.mozilla.org/mozilla-central/source/dom/telephony/gonk/TelephonyUtils.jsm#100
Thanks!
::: dom/telephony/gonk/TelephonyService.js
@@ +2135,5 @@
> + }
> +
> + // There is no conference call.
> + if (DEBUG) debug("hangUpConference: " +
> + "No conference call in modem[" + aClientId + "].");
We should reply a error if there is no conference call to hangup.
Attachment #8672485 -
Flags: review?(btseng)
| Assignee | ||
Comment 12•10 years ago
|
||
Attachment #8672485 -
Attachment is obsolete: true
| Assignee | ||
Comment 13•10 years ago
|
||
Comment on attachment 8672520 [details] [diff] [review]
Part 1 (V2): Deprecate nsITelephonyListener::conferenceCallStateChanged (Telephony)
Here is an updated version :P
Attachment #8672520 -
Flags: review?(btseng)
Comment 14•10 years ago
|
||
Comment on attachment 8672520 [details] [diff] [review]
Part 1 (V2): Deprecate nsITelephonyListener::conferenceCallStateChanged (Telephony)
Review of attachment 8672520 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM, thanks!
Attachment #8672520 -
Flags: review?(btseng) → review+
| Assignee | ||
Comment 15•10 years ago
|
||
Comment on attachment 8672449 [details] [diff] [review]
Part 2: Deprecate nsITelephonyListener::conferenceCallStateChanged (Bluetooth)
Hi Ben
We are now refactoring some telephony-relevant interfaces, and |nsITelephonyListener::conferenceCallStateChanged| is going to be deprecated in this bug. Since |TelephonyListener::ConferenceCallStateChanged()| seems just to implement the method without futher meaning, I simply removed it. Do you mind reviewing this patch?
Attachment #8672449 -
Flags: review?(btian)
Comment 16•10 years ago
|
||
Comment on attachment 8672449 [details] [diff] [review]
Part 2: Deprecate nsITelephonyListener::conferenceCallStateChanged (Bluetooth)
Review of attachment 8672449 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM
Attachment #8672449 -
Flags: review?(btian) → review+
| Assignee | ||
Comment 17•10 years ago
|
||
Keywords: checkin-needed
Comment 18•10 years ago
|
||
https://hg.mozilla.org/integration/b2g-inbound/rev/6d06e276a2b9
https://hg.mozilla.org/integration/b2g-inbound/rev/2b959bec2e88
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/6d06e276a2b9
https://hg.mozilla.org/mozilla-central/rev/2b959bec2e88
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S10 (30Oct)
You need to log in
before you can comment on or make changes to this bug.
Description
•