Bug 1155072 - Part 1:  Deprecate nsITelephonyListener.conferenceCallStateChanged (Telephony). r=btseng