dom/telephony/ipc/TelephonyChild.h
@@ -42,9 +42,6 @@ protected:
                             const IPCCdmaWaitingCallData& aData) override;
 
   virtual bool
-  RecvNotifyConferenceCallStateChanged(const uint16_t& aCallState) override;
-
-  virtual bool
   RecvNotifyConferenceError(const nsString& aName,
                             const nsString& aMessage) override;
 
